--- a/homeworks/hm1/index.html
+++ b/homeworks/hm1/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Homework 1</title>
 	<!-- <script type="text/javascript" src='first.js'></script> -->
-	<script type="text/javascript" src='third.js'></script>
+	<script type="text/javascript" src='second.js'></script>
+	<!-- <script type="text/javascript" src='third.js'></script> -->
 </head>
 <body>
 	
