Changed print worker function

--- a/homeworks/hm3/index.html
+++ b/homeworks/hm3/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Homework 3</title>
 	<!-- <script type="text/javascript" src='first.js'></script> -->
-	<!-- <script type="text/javascript" src="second.js"></script> -->
-	<script type="text/javascript" src='third.js'></script>
+	<script type="text/javascript" src="second.js"></script>
+	<!-- <script type="text/javascript" src='third.js'></script> -->
 </head>
 <body>
 	
