--- a/homeworks/hm6/index.html
+++ b/homeworks/hm6/index.html
@@ -71,6 +71,7 @@
 		<div class='work-area'>
 			<div class="memory-and-numbers">
 				<div class="row">
+					<div id='Mc'>Mc</div>
 					<div id='Mr'>Mr</div>
 					<div id='Mr+'>Mr+</div>
 					<div id='Mr-'>Mr-</div>
