--- a/homeworks/hm6/validation.html
+++ b/homeworks/hm6/validation.html
@@ -31,14 +31,6 @@
 		    padding: 10px 20px;
 		    margin: 20px 185px;
 		}
-		#error-log{
-			text-align: center;
-			color: red;
-		}
-		#success-log{
-			text-align: center;
-			color: green;
-		}
 		.hidden{
 			display: none;
 		}
@@ -67,7 +59,7 @@
 			<span>Возраст</span>
 			<input type="text" id="age" placeholder="18">
 		</label>
-		<button id='submit' type='button'>Отправить</button>
+		<input id='submit' type='submit' value="Отправить">
 	</form>
 
 	<script type="text/javascript" src="validation.js"></script>
